<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_start_simulation_fight_back_weaker"
          android:title="@string/menu_start_simulation_fight_back_weaker"
          android:orderInCategory="101" />
    <item android:id="@+id/menu_start_simulation_fight_back_stronger"
          android:title="@string/menu_start_simulation_fight_back_stronger"
          android:orderInCategory="102" />
    <item android:id="@+id/menu_start_simulation_fight_counter_attack"
          android:title="@string/menu_start_simulation_counter_attack"
          android:orderInCategory="103" />
    <item android:id="@+id/menu_start_simulation_fight_passive"
          android:title="@string/menu_start_simulation_passive"
          android:orderInCategory="104" />
    <item android:id="@+id/menu_start_simulation_fight_continuous"
          android:title="@string/menu_start_simulation_continuous"
          android:orderInCategory="105" />
    <item android:id="@+id/menu_start_simulation_fight_observer_only"
          android:title="@string/menu_start_simulation_observer_only"
          android:orderInCategory="106" />
</menu>
